更新学习日志

--- a/日志/日志2022.05.md
+++ b/日志/日志2022.05.md
@@ -273,13 +273,13 @@ Hello World
 
 安装了几个vim插件
 
-#  2022.05.11
+#  2022.05.11-2022.05.13
 
 ## 夜深人静写算法-03-初等数论
 
 ### 一、数论基本概念
 
-**1、整除性**
+#### 1、整除性
 
 a、b都是整数，a整除b --> b是a的整数倍 --> a是b的约数(因数、因子)，记作$a|b$
 
@@ -326,9 +326,9 @@ $$
 
 由[可消性](#可消性)得$11|4b,且4和11互素\Longrightarrow 11|b$
 
-**2、素数**
+#### 2、素数
 
-1)、素数和合数
+##### 1)、素数和合数
 
 素数又称质数，素数首先满足条件是要大于等于 2，并且除了 1 和它本身外，不能被其它任何自然数整除；
 
@@ -336,7 +336,7 @@ $$
 
 而 1 既非素数也非合数；特殊的，2 是唯一的偶素数。
 
-2)、素数判定
+##### 2)、素数判定
 
 - 简单算法：
 
@@ -350,13 +350,13 @@ $$
 
 若n是合数，那么n必然后一个在$[2,\sqrt{n}]$范围内的素因子，只需要判断$[2,\sqrt{n}]$范围内的素因子是否能整除n，若存在，则n是合数，若不存在则n是素数。
 
-3)、素数定理
+##### 3)、素数定理
 
 当$x$很大时，小于$x$的素数的个数接近于$\frac{x}{\ln{x}}$，$\ln x$是$x$的自然对数。用$\pi{(x)}$表示不大于x的素数个数：
 $$
 \lim _{x \rightarrow \infty} \frac{\pi(x)}{x / \ln (x)}=1
 $$
-4)、素数筛选法
+##### 4)、素数筛选法
 
 Eratosthenes筛选法
 
@@ -408,9 +408,9 @@ void Euler()
 
 对于大于$10^7$的数，使用$拉宾-米勒(Rabin−MillerRabin)素性检验$来判断是否为素数
 
-**3、因数分解**
+#### 3、因数分解
 
-1)、算术基本定理
+##### 1)、算术基本定理
 
 算术基本定理可以描述为：对于每个整数 n ，都可以唯一分解成素数的乘积，如下：
 $$
@@ -426,7 +426,7 @@ n=p_{1}^{e_{1}} p_{2}^{e_{2}} p_{3}^{e_{3}} \ldots p_{k}^{e_{k}} \quad
 \left(1< p_{1}<p_{2}<p_{3}<\ldots<p_{k} \text { and } e_{i}、p_i \in N^+ \right)
 \end{gathered}
 $$
-2)、素数拆分
+##### 2)、素数拆分
 
 假设$n=pm，m>1$，其中$p$是素数，若$p>\sqrt{n}$，那么$m$必有一个小于等于$\sqrt{n}$的素因数，因此，设$p\leq \sqrt{n}$。
 
@@ -535,7 +535,7 @@ int main()
 }
 ```
 
-3)、因子个数
+##### 3)、因子个数
 
 枚举$[1,\sqrt{n}]$范围内的因子数即可得到$n$的因子数
 
@@ -583,7 +583,7 @@ $$
 $$
 s(x^y)=\prod_{i=1}^{k} \frac{p_{i}^{ye_{i}+1}-1}{p_{i}-1}
 $$
-**4、最大公约数(GCD)和最小公倍数(LCM)**
+#### 4、最大公约数(GCD)和最小公倍数(LCM)
 
 两个数a和b的最大公约数 (Greatest Common Divisor) 是指同时整除b和b的最大因数，记为$gcd(a,b)$。特殊的，当$gcd(a,b)=1$，我们称a和b互素。
 
@@ -644,9 +644,9 @@ f(i)=
 \end{cases}
 $$
 
-**5、同余**
+#### 5、同余
 
-1)、模运算
+##### 1)、模运算
 
 给定$p\in N^+$，对$\forall n \in Z$，一定存在等式$n=kp+r$，其中$k、r \in Z，且 0 \leq r < p$，称$k$是$n$除以$p$的商，$r$是$n$除以$p$的余数。(用$\%$表示取模运算)。
 
@@ -660,7 +660,7 @@ $$
 - 模运算满足交换律、结合律和分配律
 - $a \equiv b (\bmod n)$，表示$a$和$b$模$n$同余，即$a\%n=b\%n$
 
-2)、快速幂取模
+##### 2)、快速幂取模
 
 给定整数a，正整数n，以及非零整数p，求$a^n \% p$。使用递归求解，令：
 $$
@@ -765,7 +765,7 @@ int main()
 }
 ```
 
-3)、循环节
+##### 3)、循环节
 
 **例：**$f[1]=a,f[2]=b,f[3]=c，当n>3时，f[n]=(Af[n-1]+Bf[n-2]+Cf[n-3])\%54$，给定$a,b,c,A,B,C$，求$f[n]，其中n<2^{31}$。
 
@@ -777,7 +777,7 @@ int main()
 
 ### 二、数论基础知识
 
-#### **1、欧几里德定理(辗转相除法)**
+#### 1、欧几里德定理(辗转相除法)
 
 $$
 gcd(a,b)=gcd(b,a\%b)
@@ -823,7 +823,7 @@ $$
 
 当$t>1$时，$\exists r，对于 \forall a,b \in Z 使得 r \neq an-mb $
 
-#### **2、扩展欧几里德定理**
+#### 2、扩展欧几里德定理
 
 ##### 1)、线性同余
 
@@ -912,7 +912,7 @@ b \equiv \frac{1}{a} \pmod{n}\ \ \ \ 或\ \ \ \ b \equiv a^{-1} \pmod{n}
 $$
 求$a$模n的逆元，就是模线性方程$a x \equiv b \quad(\bmod n)$中$b=1$的特殊形式，且$gcd(a,n)>1$时，逆不存在。
 
-#### **3、中国剩余定理**
+#### 3、中国剩余定理
 
 中国剩余定理是求解**模线性方程组**的解
 
@@ -926,7 +926,7 @@ x \equiv a_{n}\left(\bmod m_{n}\right)
 \end{array}\right.
 $$
 
-#### **4、欧拉函数**
+#### 4、欧拉函数
 
 ##### 1)、互素
 
@@ -1073,6 +1073,57 @@ int main()
 $$
 a^{\phi(n)} \equiv 1\quad (\bmod n)
 $$
+
+*证明：*
+
+(1)将$[1,n)$中与$n$互素的数依次排序(共$\phi(n)$个)：
+$$
+x_1,x_2,\cdots ,x_{\phi(n)}
+$$
+(2)将所有互素的数乘以a：
+$$
+y_i=ax_i	\quad (1\leq i \leq \phi(n))
+$$
+(3)其中任意两数相减：
+$$
+\begin{aligned}
+y_i-y_j &= ax_i-ax_j)	\\
+		&=a(x_i-x_j)	\\
+		&=ab
+\end{aligned}
+$$
+由于$gcd(a,n)=1$，且$|b|=|x_i-x_j|<n$，所以$ab$不是$n$的倍数，从而$y_i和y_j$模$n$不同余($y_i\%n \neq y_j\%n$)，可得$\{y_i\bmod n\}$有$\phi(n)$种余数。
+
+(4)由辗转相除法(欧几里德算法)可得：
+$$
+\begin{aligned}
+gcd(n,y_i\bmod n)	&= gcd(y_i,n)	\\
+					&= gcd(ax_i,n)	\\
+					&= 1
+\end{aligned}
+$$
+可得$y_i \bmod n$与$n$互素；
+
+(5)由(1)、(3)、(4)可得$x_i$与$y_i \bmod n$是一一映射的关系(即每个$x_i$仅对于一个$y_i$，每个$y_i$仅对于一个$x_i$)；
+
+集合$\{ x_i \}$包含了所有小于n且与n互素的数，共$\phi(n)$个，同样，集合$\{ y_i\bmod n \}$是所有小于n且与n互素的数的集合且有$\phi(n)$个元素；
+
+那么$\{ x_i \} = \{ y_i\bmod n \}$，因此$\prod_{i=1}^{\phi(n)} x_i$与$\prod_{i=1}^{\phi(n)} (y_i \bmod n)$模n同余
+$$
+\begin{aligned}
+\prod_{i=1}^{\phi(n)} x_i	& \equiv \prod_{i=1}^{\phi(n)} (y_i \bmod n)	\quad( \bmod n)	\\
+							& \equiv ax_1*ax_2* \cdots *ax_{\phi(n)}	\quad (\bmod n)	\\
+							& \equiv a^{\phi(n)} \prod_{i=1}^{\phi(n)} x_i	\quad  (\bmod n)
+\end{aligned}
+$$
+更直观的可以表示为：
+$$
+\left( a^{\phi(n)}-1 \right) \prod_{i=1}^{\phi(n)} x_i	=kn
+$$
+由于$gcd(\prod_{i=1}^{\phi(n)} x_i,n)=1$，那么$\left( a^{\phi(n)}-1 \right)$必然是$n$的倍数，所以$a^{\phi(n)}$和1模$n$同余，即：
+$$
+a^{\phi(n)} \equiv 1	\quad (\bmod n)
+$$
 **费马小定理**
 
 若$p$为素数，且$gcd(a,q)=1$，则：
@@ -1081,6 +1132,100 @@ a^{p-1} \equiv 1 \quad (\bmod p)
 $$
 当n为素数时，$\phi(n)=n-1$，可见费马小定理时欧拉定理的特殊情况
 
+##### 4)、扩展欧拉定理
+
+对于任意整数$a,b,c$，必定满足
+$$
+a^{b} \bmod c= 
+\begin{cases}
+a^{b} \bmod c & b<\phi(c) \\ 
+a^{b \  \bmod \phi(c)+\phi(c)} \bmod c & b \geq \phi(c)
+\end{cases}
+$$
+*证明：*
 
 
-4)
+
+### 三、数论常用算法
+
+####  a、Rabin-Miller大素数判定
+
+对于一个很大的数，使用拉宾-米勒素数判定
+
+#### b、Pollard-rho 大数因式分解
+
+Pollard-rho 是一个大数分解的随机算法，能够在 $O(n ^{\frac 14} )$的时间内找到$n$的一个素因子$p$
+
+#### c、Baby-Step Giant-Step 离散对数
+
+$$
+a^x \equiv b \ (\bmod n)
+$$
+
+对于如上方程，只有$x$是未知数，$(a,b,n) $为常数，使用$Baby-Setp Giant-Step$进行求解
+
+#### d、二次剩余
+
+$a,n$都是常数，求一个最小的$x$满足：
+$$
+x^2 \equiv a \ (\bmod n)
+$$
+
+#### e、RSA算法
+
+敏感数据加密算法
+
+# 2022.05.14
+
+## Ubuntu开启SMB
+
+由于Windows挂载Ubuntu的NFS服务会出现中文乱码的问题，选择SMB实现文件共享
+
+```shell
+# 安装相关软件
+sudo apt-get install samba
+sudo apt-get install smbclient
+sudo apt-get install cifs-utils（新版本的ubuntu，>12.04即可）
+sudo apt-get install smbfs(旧版本的ubuntu)
+
+# 修改配置文件
+sudo vim /etc/samba/smb.conf
+#------配置文件-start--
+# 在global下的workgroup=WORKGROUP下面添加一句：
+security = user
+# 先创建要共享的文件夹，并赋予相应权限，比如 sudo chmod 777 /path_of_folder
+# 然后在文件末尾添加：
+[workspace]
+   comment = sharefolder
+   path = /path_of_folder
+   valid users = mario
+   browseable = yes
+   read only = yes
+   create mask = 0777
+   directory mask = 0777
+   public = yes
+   writable = yes
+   available = yes
+#------配置文件-end----
+
+# 保存配置文件后重新启动samba
+# cd到 /etc/init.d/下查看是哪个（samba或者smbd）
+sudo /etc/init.d/samba restart
+# 或者 sudo /etc/init.d/smbd restart
+
+# 添加新用户
+sudo smbpasswd -a users
+# 然后输入两次为新用户准备密码
+
+# smbpasswd的用法：
+# smbpasswd -a users：增加用户users
+# smbpasswd -d users：冻结用户users，这个用户不能再登录
+# smbpasswd -e users：恢复冻结的用户users，让冻结的用户可以再使用
+# smbpasswd -x users：删除用户users
+```
+
+最后在window下右键计算机，点击映射网络驱动器
+
+![image-20220514115535983](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/05/upgit_20220514_1652500536.png)
+
+然后输入刚刚设置的用户名和密码即可。
