修改公式格式

--- a/统计学习方法.md
+++ b/统计学习方法.md
@@ -79,7 +79,7 @@ flowchart  LR
 首先给定训练数据集：
 
 $$
-T=\left\{ (x_1,y_1),(x_2,y_2),\cdots,(x_N,y_N) \right\}
+T=\left\\{ (x_1,y_1),(x_2,y_2),\cdots,(x_N,y_N) \right\\}
 $$
 
 其中，$(x_i,y_i),i=1,2,\cdots,N$称为样本或样本点；$x_i \in \mathcal{X} \subseteq  \mathbb{R}^n$是输入的观测值(也称为输入或实例)，$y_i \in \mathcal{y}$是输出的观测值(也称输出)。
