修改公式格式

--- a/统计学习方法.md
+++ b/统计学习方法.md
@@ -56,7 +56,7 @@ $x^{(i)}$不同于$x_i$，$x_i$表示多个输入变量中的第$i$个变量
 训练集表示为：
 
 $$
-T=\left\{\left(x_{1}, y_{1}\right),\left(x_{2}, y_{2}\right), \cdots,\left(x_{N}, y_{N}\right)\right\}
+T=\left \{ (x_1,y_1),(x_2,y_2),\cdots,(x_N,y_N) \right \}
 $$
 
 输入输出对$(x_i,y_i)$又称为样本(sample)或样本点
