修改公式格式

--- a/统计学习方法.md
+++ b/统计学习方法.md
@@ -59,6 +59,10 @@ $$
 T=\left \{ (x_1,y_1),(x_2,y_2),\cdots,(x_N,y_N) \right \}
 $$
 
+
+$$
+\left\{x\right\}
+$$
 输入输出对$(x_i,y_i)$又称为样本(sample)或样本点
 
 联合概率分布$P(X,Y)$表示分布函数，或分布密度函数
