修改公式格式

--- a/统计学习方法.md
+++ b/统计学习方法.md
@@ -59,9 +59,10 @@ $$
 T=\left \{ (x_1,y_1),(x_2,y_2),\cdots,(x_N,y_N) \right \}
 $$
 
+**注：**在HTML中，左侧大括号反斜杠 \{ 会被转义、换行符双反斜杠\\会被转义
 
 $$
-\left\{x\right\}
+T=\left \\{ (x_1,y_1),(x_2,y_2),\cdots,(x_N,y_N) \right \\}
 $$
 
 输入输出对$(x_i,y_i)$又称为样本(sample)或样本点
@@ -82,6 +83,10 @@ flowchart  LR
 ```
 
 首先给定训练数据集：
+
+$$
+T=\left\{ (x_1,y_1),(x_2,y_2),\cdots,(x_N,y_N) \right\}
+$$
 
 $$
 T=\left\\{ (x_1,y_1),(x_2,y_2),\cdots,(x_N,y_N) \right\\}
