修改公式格式

--- a/四元数.md
+++ b/四元数.md
@@ -48,11 +48,11 @@ $$
 $$
 \begin{aligned}
 q_1 q_2 =& (s_1 + x_1i +y_1j + z_1k)(s_2 + x_2i +y_2j + z_2k)
-\\    =&(s_1s_2 - x_1x_2 - y_1y_2 - z_1z_2)
-\\      &+(s_1x_2 + s_2x_1 + y_1z_2 -y_2z_1)i
-\\      &+(s_1y_2 + s_2y_1 + z_1x_2 - z_2x_1)j
-\\      &+(s_1z_2 + s_2z_1 + x_1y_2 - x_2y_1)k
-\\    =&[s_1s_2-v_1\cdot v_2,s_1v_2 + s_2v_1 + v_1 \times v_2]
+\\\\    =&(s_1s_2 - x_1x_2 - y_1y_2 - z_1z_2)
+\\\\      &+(s_1x_2 + s_2x_1 + y_1z_2 -y_2z_1)i
+\\\\      &+(s_1y_2 + s_2y_1 + z_1x_2 - z_2x_1)j
+\\\\      &+(s_1z_2 + s_2z_1 + x_1y_2 - x_2y_1)k
+\\\\    =&[s_1s_2-v_1\cdot v_2,s_1v_2 + s_2v_1 + v_1 \times v_2]
 \end{aligned}
 $$
 
