--- a/日志/日志2022.05.md
+++ b/日志/日志2022.05.md
@@ -1229,3 +1229,55 @@ sudo smbpasswd -a users
 ![image-20220514115535983](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/05/upgit_20220514_1652500536.png)
 
 然后输入刚刚设置的用户名和密码即可。
+
+# 2022.05.25
+
+## quark开发板SD卡扩容
+
+``` shell
+# 只安装 cloud-utils
+sudo apt-get install cloud-utils
+# 重启
+sudo reboot
+# 检查SD卡
+sudo fdisk -l
+```
+
+![image-20220525202806675](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/05/upgit_20220525_1653481686.png)
+
+16G的SD卡，系统只用了8G空间
+
+![image-20220525202904915](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/05/upgit_20220525_1653481745.png)
+
+```shell
+# 通过 growpart 增大分区3
+sudo growpart /dev/mmcblk0 3
+```
+
+![image-20220525202940235](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/05/upgit_20220525_1653481780.png)
+
+```shell
+# 检查在线扩容是否成功
+sudo parted -l /dev/mmcblk0
+```
+
+![image-20220525203137608](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/05/upgit_20220525_1653481907.png)
+
+```shell
+# 先挂载分区（原理不明），再执行 resize2fs ：
+sudo mkdir -p /tmp/p3
+sudo mount /dev/mmcblk0p3 /tmp/p3
+ls /tmp/p3
+sudo resize2fs /dev/mmcblk0p3
+```
+
+![image-20220525203344102](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/05/upgit_20220525_1653482024.png)
+
+```shell
+# 重起系统：
+sudo reboot
+# 验证结果：
+df -h
+```
+
+![image-20220525203451897](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/05/upgit_20220525_1653482092.png)
