更新dockerfile和日志

--- a/日志/日志2022.01.md
+++ b/日志/日志2022.01.md
@@ -1941,3 +1941,13 @@ docker run -d -P --name 容器名 --net 网络名 镜像id
 # 将容器添加到指定网络
 docker network connect 网络名 容器名
 ```
+
+## Device
+
+```shell
+# 创建容器时挂载设备
+docker run -it --name 容器id --device=主机设备路径 镜像id
+# 创建容器时挂载设备到容器的指定位置
+docker run -it --name 容器id --device=主机设备路径:容器设备路径 镜像id
+```
+
