--- a/六级.md
+++ b/六级.md
@@ -22,9 +22,134 @@
 
 注意卷面，少涂改，写错了杠掉就好了，不要涂！分三段，少一些模板的，假大空的东西。
 
+#### 意义措施类
+
+**首段**：话题引入 & 主题阐述
+
+*第一句：*
+
+```mermaid
+graph LR;
+A1(There is little doubt that...<br>毫无疑问...)-->B( )
+A2(It cannot be denied that...<br>不可否认...)-->B
+A3(It is beyond doubt that...<br>毫无疑问...)-->B
+A4(It is generally accepted that...<br>人们普遍认为...)-->B
+A5(There is a growing recognition that...<br>人们越来越认识到...)-->B
+A6(It has been widely noted that...<br>人们普遍注意...)-->B
+A7(It goes without saying that...<br>不用说的是...)-->B
+B-->C1(___plays an extremely important role.)
+B-->C2(Nothing is more important than___.)
+```
+
+**In a rapidly developing society,（介词短语直接抄，不需要纠结）it is generally accepted that __ plays a fundamental role in __. **
+
+*第二句：*
+
+**主题词+,which(非限制性定语从句)+模板句**
+
+```mermaid
+graph LR;
+A(..., )-->B1(which is held by many to be..., )
+A(..., )-->B2(which exerts ...)
+B2-->C1(a great impact)
+B2-->C2(a positive influence)
+B2-->C3(a negative impact)
+D(on..., )
+C1-->D
+C2-->D
+C3-->D
+D-->E1(sth has/have captured/drawn one's attention.)
+B1-->E1
+D-->E2(sth has/have emerged into our vision.)
+B1-->E2
+```
+
+**中间段**：背景句 & 第一方面(背景句+论据+例子) & 第二方面(not only,but also+举例)
+
+*第一句：*
+
+**There are two fundamental factors contributing to this phenomenon.**
+
+造成这种现象有两个基本因素
+**As regards to the social implication of ..., my discussion on the issue is mainly twofold**
+
+关于...的社会影响, 我的讨论主要有两个方面
+
+*第一方面：*
+
+-**背景句**
+
+```mermaid
+graph LR;
+O(In a age/society where )
+O-->A1(competition in job markets becomes increasingly fierce/stiff, <br>在一个就业市场竞争日益激烈的社会里 *社会竞争*)
+O-->A2(globalization and information technology revolution are<br> developing/advancing rapidly, <br>在全球化和信息技术革命迅猛发展的时代 *科技发展*)
+O-->A3(people's standard of living has been raised significantly, <br>在人民生活水平大幅度提高的时代 *经济发展*) 
+O-->A4(parents and educators always focus on sth, <br>在一个父母和教育者总是关注某件事的时代 *教育*)
+O-->A5(sth have/have not been highly advocated in mass media, <br>在一个大众传媒一直大力提倡某事的时代 *媒体*)
+```
+
+-**论据**
+
+**an increasing number of people find it helpful/difficult/harmful to /sth/do sth...**
+
+-**论点**——中间段第一方面的总结
+
+**Thus ... is not a choice, but a must to meet the ever-growing demands of our society.**
+
+因此，...不是一种选择，而是满足社会日益增长的需求的必然选择。**（语气较强烈）**
+
+**Thus ... is a wise choice to meet the ever-growing demands of our society.**
+
+因此，...是满足社会日益增长的需求的明智选择。**（语气缓和）**
+
+*第二方面*
+
+**-not only, but also...**（题目明确要求举例，所以最好举例，水平实在举不来例子的，用**备选方案if**也可以)
+
+**...not only..., but also...** 一小一大，两个方面
+
+-**举例**
+
+举**具体的人或事**，比如姚明，屠呦呦，华为，苹果等这些具体的事物，然后套用举例模板
+
+**For instance, sb/sth, (后置定语), do sth, (非限制定语从句)**
+
+
+
+**尾段**：总结 & 2个建议措施
+
+**题目中并没有明确要求我们写措施，所以我们写“一个措施”即可，如果字数不够，可以写两个措施**
+
+总结：
+
+**To sum up, it is of great benefit for us to ... and ....**
+
+举措：
+
+**Specifically, the fundamental way is that ....**
+
+**Meanwhile, ....**
+
+#### 观点选择类
+
+#### 现象解释类
+
+#### 谚语警句类
+
+#### 图画类
+
+
+
+
+
 **最后1分钟,检查一遍**
 
 [英语作文如何不出错](https://zhuanlan.zhihu.com/p/361770360)
+
+减少低级语法错误
+
+
 
 ## 听力（30分钟，248.5，占整套试题的35%，每个题都是7.1分）
 
@@ -46,17 +171,208 @@
 
 **正确审题，定位，对比选项。（最关键的是迅速定位到题点。）**
 
+**1.先读题目①**
+
+**2.再读原文，定位题目①。**
+
+**3.然后读题目①附近内容。**
+
+**4.最后读选项。**
+
+**5.然后再看题目②（以此类推）**
+
+#### **第一步：看题目，划出题目主干**
+
+**横看：**这很听力预读题目很像，要看懂每道题问的是什么。
+
+**竖看：**找到5道题的共性和联系（横看更重要，竖看也不可忽视），找每道题的**相同的单词**或是**派生词**或**同义词**或**同类词**。
+
+**什么是派生词？**比如*immigrate*这个单词，*immigration*，*immigrant*都属于它的派生词，我们竖看的时候都需要把它划出来。
+
+**什么是同义词？**就是相同意思的单词，比如idea，conception，notion都属于同义词
+
+**什么是同类词？**比如science理科，humanity文科，那么education教育就属于同类词。我们依然要把它们划出来。
+
+**阅读顺序：题目部分，如果五道题中含有多个专有名词，时间，地点等名词，则先竖看，再横看。**
+
+**如果五道题中没有多个专有名词，则先横看，再竖看。**
+
+**审题时不要读选项**
+
+#### **第二步：阅读原文，处理文章**——定位题干
+
+**一，所谓主题结构，就是文章的大义，每段的首句一定不能跳过。**
+
+**二、把题干的出题范围在原文中找到**
+
+**考点就是原文中哪一句是题目的正确答案**
+
+**考点第一在题干定位句第二在题干定位句的前后句。**
+
+**离题干较远，或跨段的信息一般不是答案。**
+
+**那么考点有哪些呢？**
+
+**因果、并列、比较（比较级最高级都算）、转折、数字前后的结论、举例前后的结论、结论性、建议性的内容、全文最后一段（常常是最后一句）**
+
+#### **第三步：对比文章和题目，选出最后答案**
+
+阅读的正确答案，**全部都是对原文信息的精确改写/概括/总结。**
+
+**改写有两种形式：**
+
+**1.形式对应（因果、并列、比较、转折）（比较容易）** 比如题干问的是why？原文给的是because。题干问的是most important，原文给的是matter most
+
+**2.含义对应（同义替换，隐含逻辑关系）（难度较大）**比如：我喜欢游泳，我弟弟喜欢唱歌，它们俩中间有没有隐含的逻辑关系，这里面有的关系分别是：并列and，转折but，对比while。
+
+
 ### 匹配阅读（22-25分钟，71分，每题7.1分）
 
 [匹配阅读](https://www.zhihu.com/question/303163695/answer/1858227726)
 
 匹配阅读，最好保持到8个左右的正确率
 
+在做段落匹配的时候，只要发现一个选项和原文 70% 以上重复了，它就一定是正确答案
+
+#### **1、精读题目**——先把10的题目都看一遍
+
+**快速精读 10 道题目，划主干，做标记，然后反复默念你划的单词。**
+
+**名词为主（主语+宾语），比较级，最高级，only，数字，大写（专有名词），生词**
+
+**优先定位：数字（时间）、大写（专有名词）、生词的题目的出处**
+
+**做标记，越少越好。（控制在三处左右，也就是你划的内容不要超过三处）**
+
+**反复默念：做好标记之后，心中反复默念你标记的单词**
+
+**2、速读文章**
+
+顺序读文章，定位题干关键词（注意有**中文注释、数字、人名、比较**等的地方）
+
+**3、反复翻看对比**
+
+迅速浏览题干关键词，对比题干和原文，确定答案
+
+#### **2、关键**
+
+**1、快读，**做到**不求甚解**，要克服一些**「不良的阅读习惯」。**不需要你完全看懂文章。
+
+**2、信息匹配**，选项与原文**如果有 3 处的分散信息点**对应，那它就是答案。**如果有一处对应点是**数字，或**者是专有**名词，或**者是带有中文注释的**生词，**则再加一处信息点对应（2 点对应即可）就是**答案！
+
+**3、**发现**只有 1-2 处单词的**重复，仔细去看，**发现选项的大意和原文大意是不一**样的（idea 不同）**，或者内容有明**显缺失，这种就是不匹配。
+
+**4、大量重复**，若四个单词重复，并且 4 个单词基本连续出现，那它一定是答案
+
+**5、同义替换：近义词，派生词，概括**
+
+**6、部分名词不好替换**，在标记选项中，尽可能多划名词
+
+**7、有中文注释的句子可能就是答案**（题目中的生词）
+
+
+
 ### 翻译（20分钟，106.5分）
 
 [翻译攻略](https://zhuanlan.zhihu.com/p/377251738)
 
-**如何不犯语法错误**
+**如何避免语法错误**
+
+#### 第一部分
+
+##### 一、修饰后置
+
+```mermaid
+graph LR;
+A(修饰后置)
+B(介词短语)
+C(定语从句)
+D(插入语或同位语)
+E(限制性定语从句)
+F(非限制性定语从句)
+A-->B
+A-->C
+A-->D
+C-->E
+C-->F
+```
+
+
+
+![image-20220606222839892](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/06/upgit_20220606_1654525720.png)
+
+![image-20220606223004183](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/06/upgit_20220606_1654525804.png)
+
+**插入语**一般作为一种形式，是同位语的一种，同位语的作用是**解释说明名词**的。
+
+一般可以用插入语的形式解释说明名词。
+
+只要六级翻译中**出现了解释说明某个名词的部分（一般出现在开头）**我们就要立刻想到插入语和同位语。
+
+##### 二、多动句
+
+**多动句**，就是**一个句子中出现多个动词**
+
+推荐使用非谓语动词
+
+```mermaid
+graph LR;
+A(多动句)
+B(1 动词之间地位相同<br>用and连接)
+C(2 动词之间有主次之分<br>找到主要动词,其他用非谓语动词)
+D(3 不知道主次<br>用其他连词)
+A-->B
+A-->C
+A-->D
+```
+
+哪个动词**离主语近**，哪个就处理成**谓语动词**(主要动词)，其他动词全部处理成**非谓语动词(doing/ done/ to do)**
+
+##### 三、无主句
+
+无主句就是**没有主语**的句子，在汉语中特别常见
+
+推荐使用“**变被动**”
+
+```mermaid
+graph LR;
+A(无主句)
+B(1 加主语)
+C(2 变被动)
+D(3 非人主语)
+A-->B
+A-->C
+A-->D
+```
+
+当**主语不是人**，且句子中出现“**有，存在**”等这样的字眼，使用**there be**句式
+
+#### 第二部分
+
+**先求稳，再去秀。**
+
+**第一步：找到句子范围，提炼主干**
+
+```flow
+step1=>operation: 找到句子范围，提炼主干
+note1=>subroutine: 句子主干无非就是：主谓，主谓宾，主系表等
+拿到一个句子，需要把一个句子的主干提炼出来
+step2=>operation: 将修饰部分翻译，根据修饰后置的原则融入主干
+note2=>subroutine: 若主干遭遇翻译障碍，重新选择
+或替换汉语原句子的主语、谓语或系动词。
+单词如果不会写，尝试用短语，
+短语如果不会写，尝试用从句，
+从句如果不会写，尝试用单句解释。
+step3=>operation: 把主干和修饰组合，检查改正
+note3=>subroutine: 避免以下问题：
+谓语动词单复数，
+谓语动词的唯一性，
+从句等
+step1->note1->step2->note2->step3->note3
+
+```
+
+
 
 ### 选词填空（5分钟，35.5分，每题3.55分）
 
