--- a/六级.md
+++ b/六级.md
@@ -371,7 +371,20 @@ note3=>subroutine: 避免以下问题：
 step1->note1->step2->note2->step3->note3
 
 ```
+```mermaid
+graph LR;
+A(找到句子范围, 提炼主干)
+B(句子主干无非就是: 主谓, 主谓宾, 主系表等<br>拿到一个句子, 需要把一个句子的主干提炼出来)
+C(将修饰部分翻译, 根据修饰后置的原则融入主干)
+D(若主干遭遇翻译障碍, 重新选择<br>或替换汉语原句子的主语, 谓语或系动词<br>单词如果不会写, 尝试用短语, <br>短语如果不会写, 尝试用从句, <br>从句如果不会写, 尝试用单句解释)
+E(把主干和修饰组合, 检查改正)
+F(避免以下问题: <br>谓语动词单复数, <br>谓语动词的唯一性, <br>从句等)
+A-->B
 
+C-->D
+
+E-->F
+```
 
 
 ### 选词填空（5分钟，35.5分，每题3.55分）
