--- a/六级.md
+++ b/六级.md
@@ -30,13 +30,13 @@
 
 ```mermaid
 graph LR;
-A1(There is little doubt that...<br>毫无疑问...)-->B( )
-A2(It cannot be denied that...<br>不可否认...)-->B
-A3(It is beyond doubt that...<br>毫无疑问...)-->B
-A4(It is generally accepted that...<br>人们普遍认为...)-->B
-A5(There is a growing recognition that...<br>人们越来越认识到...)-->B
-A6(It has been widely noted that...<br>人们普遍注意...)-->B
-A7(It goes without saying that...<br>不用说的是...)-->B
+A1(There is little doubt that...毫无疑问...)-->B( )
+A2(It cannot be denied that...不可否认...)-->B
+A3(It is beyond doubt that...毫无疑问...)-->B
+A4(It is generally accepted that...人们普遍认为...)-->B
+A5(There is a growing recognition that...人们越来越认识到...)-->B
+A6(It has been widely noted that...人们普遍注意...)-->B
+A7(It goes without saying that...不用说的是...)-->B
 B-->C1(...plays an extremely important role.)
 B-->C2(Nothing is more important than....)
 ```
@@ -82,11 +82,11 @@ B1-->E2
 ```mermaid
 graph LR;
 O1(In a age/society where )
-O1-->A1(competition in job markets becomes increasingly fierce/stiff, <br>在一个就业市场竞争日益激烈的社会里<br>社会竞争)
-O1-->A2(globalization and information technology revolution are<br> developing/advancing rapidly, <br>在全球化和信息技术革命迅猛发展的时代<br>科技发展)
+O1-->A1(competition in job markets becomes increasingly fierce/stiff, <br>在一个就业市场竞争日益激烈的社会里_社会竞争)
+O1-->A2(globalization and information technology revolution are<br> developing/advancing rapidly, <br>在全球化和信息技术革命迅猛发展的时代_科技发展)
 O1-->A3(people's standard of living has been raised significantly, <br>在人民生活水平大幅度提高的时代_经济发展) 
-O1-->A4(parents and educators always focus on sth, <br>在一个父母和教育者总是关注某件事的时代<br>教育)
-O1-->A5(sth have/have not been highly advocated in mass media, <br>在一个大众传媒一直大力提倡某事的时代<br>媒体)
+O1-->A4(parents and educators always focus on sth, <br>在一个父母和教育者总是关注某件事的时代_教育)
+O1-->A5(sth have/have not been highly advocated in mass media, <br>在一个大众传媒一直大力提倡某事的时代_媒体)
 ```
 
 -**论据**
@@ -299,9 +299,9 @@ C-->F
 
 
 
-![image-20220606222839892](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/06/upgit_20220606_1654525720.png)
+<img src="https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/06/upgit_20220606_1654525720.png" alt="image-20220606222839892" style="zoom: 33%;" />
 
-![image-20220606223004183](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/06/upgit_20220606_1654525804.png)
+<img src="https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/06/upgit_20220606_1654525804.png" alt="image-20220606223004183" style="zoom: 50%;" />
 
 **插入语**一般作为一种形式，是同位语的一种，同位语的作用是**解释说明名词**的。
 
@@ -353,24 +353,6 @@ A-->D
 
 **第一步：找到句子范围，提炼主干**
 
-```flow
-step1=>operation: 找到句子范围，提炼主干
-note1=>subroutine: 句子主干无非就是：主谓，主谓宾，主系表等
-拿到一个句子，需要把一个句子的主干提炼出来
-step2=>operation: 将修饰部分翻译，根据修饰后置的原则融入主干
-note2=>subroutine: 若主干遭遇翻译障碍，重新选择
-或替换汉语原句子的主语、谓语或系动词。
-单词如果不会写，尝试用短语，
-短语如果不会写，尝试用从句，
-从句如果不会写，尝试用单句解释。
-step3=>operation: 把主干和修饰组合，检查改正
-note3=>subroutine: 避免以下问题：
-谓语动词单复数，
-谓语动词的唯一性，
-从句等
-step1->note1->step2->note2->step3->note3
-
-```
 ```mermaid
 graph LR;
 A(找到句子范围, 提炼主干)
