修改，便于导出pdf

--- a/六级.md
+++ b/六级.md
@@ -373,3 +373,34 @@ E-->F
 
 [选词填空](https://www.zhihu.com/question/263751195/answer/2342881500)
 
+#### 1.预读选项（选项分类）
+
+将选项分为**副词(adv.)**;**形容词(adj.)**;**名词(n.)**;**do/doing/动词ed** 四大类
+
+（第四类不管，总之第四类跟动词有关系就行）
+
+在明显符合前三类词性的词后面作词性注释
+
+#### 2.设空处分类（题目分类）
+
+根据设空处的前后特征，按以下优先级做题。
+
+**①**最简单的题：
+
+设空处*前有介词或冠词(a,an,the,his..)、形容词*时，则选**名词**
+
+
+
+**②**相对简单的题：
+
+设空处前面是*be动词(be,am,is,are,was,were)，后面是谓语动词*；或前面*是be动词，后面是形容词*。则选**副词**
+
+*前面是be动词，后面是介词*，首选**动词ed**、次选**动词ing**
+
+
+
+**③**其他类型：
+
+设空处*后面跟的是名词*，则选**形容词**
+
+如果一个*句子里面没有谓语动词，缺谓语的情况*，则选动词**原形do**，或**动词ed**
