--- a/六级.md
+++ b/六级.md
@@ -64,7 +64,7 @@ D-->E2(sth has/have emerged into our vision.)
 B1-->E2
 ```
 
-**中间段**：背景句 & 第一方面(背景句+论据+例子）& 第二方面(not only,but also+举例)
+**中间段**：背景句 & 第一方面(背景句+论据+例子）& 第二方面(not only, but also+举例)
 
 *第一句：*
 
@@ -352,7 +352,7 @@ $(4+4)*7.1+(3+4)*7.1+(3+3+4)*14.2$
 
 **2、信息匹配**，选项与原文**如果有 3 处的分散信息点**对应，那它就是答案。**如果有一处对应点是**数字，或**者是专有**名词，或**者是带有中文注释的**生词，**则再加一处信息点对应（2 点对应即可）就是**答案！
 
-**3、**发现**只有 1-2 处单词的**重复，仔细去看，**发现选项的大意和原文大意是不一**样的（idea 不同）**，或者内容有明**显缺失，这种就是不匹配。
+**3、**发现**只有 1-2 处单词的**重复，仔细去看，**发现选项的大意和原文大意是不一**样的（idea 不同），或者**内容有明显缺失**，这种就是不匹配。
 
 **4、大量重复**，若四个单词重复，并且 4 个单词基本连续出现，那它一定是答案
 
@@ -408,9 +408,9 @@ C-->F
 ```mermaid
 graph LR;
 A(多动句)
-B(1 动词之间地位相同<br>用and连接)
-C(2 动词之间有主次之分<br>找到主要动词,其他用非谓语动词)
-D(3 不知道主次<br>用其他连词)
+B(1 动词之间地位相同--用and连接)
+C(2 动词之间有主次之分--找到主要动词,其他用非谓语动词)
+D(3 不知道主次--用其他连词)
 A-->B
 A-->C
 A-->D
