--- a/六级.md
+++ b/六级.md
@@ -187,7 +187,7 @@ In a rapidly developing society, it is generally accepted that *关键词* plays
 
  
 
-As regards to the social implication of *关键词* my discussion on the issue is mainly twofold. On the one hand, in a society where *关键词的背景**(**不一定要提到关键词*), an increasing number of people find it*关键词的作用**/**关键词的影响*. Thus, *做到关键词* is not a choice, but a must to meet the ever-growing demands of our society. On the other hand, *关键词的好处1*, but also *关键词的好处2*. For example, *例子主语*, *例子的非限制性同位语*, is *与关键词相关的具体事情*, *关键词对例子的影响**(which**引导的非限制性定语从句)*. *(或者把例子换成**if**条件从句，如果不按关键词来，会带来什么结果)*
+As regards to the social implication of *关键词* my discussion on the issue is mainly twofold. On the one hand, in a society where *关键词的背景**(**不一定要提到关键词*), an increasing number of people find it*关键词的作用或关键词的影响*. Thus, *做到关键词* is not a choice, but a must to meet the ever-growing demands of our society. On the other hand, *关键词的好处1*, but also *关键词的好处2*. For example, *例子主语*, *例子的非限制性同位语*, is *与关键词相关的具体事情*, *关键词对例子的影响(**which**引导的非限制性定语从句)*. *(或者把例子换成**if**条件从句，如果不按关键词来，会带来什么结果)*
 
  
 
