修改显示错误

--- a/六级.md
+++ b/六级.md
@@ -183,7 +183,7 @@ not only，but also 可能用到的语句:
 
 
 
-In a rapidly developing society, it is generally accepted that *关键词* plays a fundamental role in *场景**/**条件*. *关键词*, which is held by many to be *作用*, has captured a great deal of public attention.
+In a rapidly developing society, it is generally accepted that *关键词* plays a fundamental role in *场景或条件*. *关键词*, which is held by many to be *作用*, has captured a great deal of public attention.
 
  
 
