--- a/日志/日志2022.01.md
+++ b/日志/日志2022.01.md
@@ -963,7 +963,7 @@ made_by_docker01
 
 1. 每个保留关键字(指令)都必须是大写字母
 2. 执行是从上到下的顺序
-3. # 表示注释
+3. \# 表示注释
 4. 每一个指令都会创建提交一个新的镜像层
 
 dockerfile是面向开发的，发布项目，做镜像就需要编写dockerfile文件
@@ -977,7 +977,7 @@ Docker容器：容器就是镜像运行起来提供服务器
 ```shell
 FROM		# 基础镜像，一切从这里开始
 MAINTAINER	# 镜像是谁写的，姓名+邮箱
-RUN			# 镜像构建是需要的命令
+RUN			# 镜像构建时需要的命令
 ADD			# 步骤：tomcat容器，这个tomcat压缩包，就是要添加的内容
 WORKDIR		# 镜像的工作目录
 VOLUME		# 挂载的目录
