--- a/日志/常用通讯协议.md
+++ b/日志/常用通讯协议.md
@@ -57,7 +57,7 @@ I2C：Inter-Integrated Circuit，集成电路总线
 | 仲裁   | 在多个主机尝试控制总线的过程中，只允许其中一个主机控制总线并使报文不被破坏的过程 |
 | 同步   | 2个及以上器件同步时钟信号                                    |
 
-![图片](https://mmbiz.qpic.cn/mmbiz_png/hgnOITBSQYv04C6bYTPdYRV5tic8KYwOnxDVnzZ0bRLIgPvKfd6vAvoNoIFr2aN7zQDujesYkNpoK31ILpFxyYg/640?wx_fmt=png&wxfrom=5&wx_lazy=1&wx_co=1)
+<img src="https://mmbiz.qpic.cn/mmbiz_png/hgnOITBSQYv04C6bYTPdYRV5tic8KYwOnxDVnzZ0bRLIgPvKfd6vAvoNoIFr2aN7zQDujesYkNpoK31ILpFxyYg/640?wx_fmt=png&wxfrom=5&wx_lazy=1&wx_co=1" alt="图片" style="zoom:67%;" />
 
 I2C 采用的 GPIO 一般为开漏模式，支持线与功能，但是开漏模式无法输出高电平，所以需要外部上拉。Vdd 可以采用 5V、3.3V、1.8V 等，电源电压不同，上拉电阻阻值也不同。
 
@@ -95,7 +95,7 @@ $R_{p(min)}=\frac{V_{DD}-V_{OL(max)}}{I_{OL}}$
 
 在 SCL 高电平期间，SDA 必须稳定，所以一般情况下，SCL 高电平宽度小，SDA 高电平宽度大
 
-![图片](https://mmbiz.qpic.cn/mmbiz_png/hgnOITBSQYv04C6bYTPdYRV5tic8KYwOnzkQoNXv1Xh3HODA9lnl1RB42iaOyZnsS6xKRPJPhz6bu9uz7R9vkeDw/640?wx_fmt=png&wxfrom=5&wx_lazy=1&wx_co=1)
+<img src="https://mmbiz.qpic.cn/mmbiz_png/hgnOITBSQYv04C6bYTPdYRV5tic8KYwOnzkQoNXv1Xh3HODA9lnl1RB42iaOyZnsS6xKRPJPhz6bu9uz7R9vkeDw/640?wx_fmt=png&wxfrom=5&wx_lazy=1&wx_co=1" alt="图片" style="zoom:50%;" />
 
 ### 起始条件和停止条件
 
@@ -105,7 +105,7 @@ $R_{p(min)}=\frac{V_{DD}-V_{OL(max)}}{I_{OL}}$
 
 因为 SCL 和 SDA 两根线有上拉电阻，因此空闲时两根线为高电平。因此，START 条件一定是某条线拉低，spec 规定是 SDA 线拉低为开始条件。这也是开始条件和停止条件不能互换的原因。
 
-![图片](https://mmbiz.qpic.cn/mmbiz_png/hgnOITBSQYv04C6bYTPdYRV5tic8KYwOnevltAqfAPv7hcAupfIK6tMgK87iaL5ibvXQvicmF3RTl4oX8ibJIm3ptyw/640?wx_fmt=png&wxfrom=5&wx_lazy=1&wx_co=1)
+<img src="https://mmbiz.qpic.cn/mmbiz_png/hgnOITBSQYv04C6bYTPdYRV5tic8KYwOnevltAqfAPv7hcAupfIK6tMgK87iaL5ibvXQvicmF3RTl4oX8ibJIm3ptyw/640?wx_fmt=png&wxfrom=5&wx_lazy=1&wx_co=1" alt="图片" style="zoom:50%;" />
 
 ### 数据格式
 
@@ -114,6 +114,6 @@ $R_{p(min)}=\frac{V_{DD}-V_{OL(max)}}{I_{OL}}$
 3. 数据必须以 MSB 开头进行传输，也就是先传输最高位
 4. 从机可以将时钟线 SCL 保持在低位，迫使主机进入等待状态。
 
-![图片](https://mmbiz.qpic.cn/mmbiz_png/hgnOITBSQYv04C6bYTPdYRV5tic8KYwOnoUiauS5GpAl92NFic7MpR2HEY9NUyBtUsUWwR1U6yAiadXchlxRslr0cw/640?wx_fmt=png&wxfrom=5&wx_lazy=1&wx_co=1)
+<img src="https://mmbiz.qpic.cn/mmbiz_png/hgnOITBSQYv04C6bYTPdYRV5tic8KYwOnoUiauS5GpAl92NFic7MpR2HEY9NUyBtUsUWwR1U6yAiadXchlxRslr0cw/640?wx_fmt=png&wxfrom=5&wx_lazy=1&wx_co=1" alt="图片" style="zoom:50%;" />
 
 SCL 高电平的时候，SDA 开始采样，SDA 是高就是 1，是低就是 0。SCL 低电平期间，SDA 变换数据。不可以在 SCL 高电平期间变换数据，否则会认为是 起始和停止条件。
