--- a/日志/日志2022.07.md
+++ b/日志/日志2022.07.md
@@ -1,5 +1,35 @@
 # 2022.07
 
+## openwrt对WAN开放samba
+
+https://www.cnblogs.com/milton/p/10327134.html
+
+```shell
+# 主要是在 /etc/config/firewall 添加配置端口
+config rule                                                                                 
+        option target 'ACCEPT'                                                              
+        option src 'wan'                                                                    
+        option proto 'udp'                                                               
+        option dest_port '137-138'                                                          
+        option name 'Allow-samba-netbios'
+ 
+config rule                                                                                 
+        option target 'ACCEPT'                                                              
+        option src 'wan'                                                                    
+        option proto 'tcp'                                                               
+        option dest_port '139'                                                             
+        option name 'Allow-samba-netbios-session'
+ 
+config rule                                                                                 
+        option target 'ACCEPT'                                                              
+        option src 'wan'                                                                    
+        option proto 'tcp'                                                                  
+        option dest_port '445'                                                              
+        option name 'Allow-samba-microsoft-directory-service'
+```
+
+
+
 ## Ubuntu挂载Windows共享文件夹
 
 ```shell
