--- a/日志/日志2022.09.md
+++ b/日志/日志2022.09.md
@@ -3,8 +3,25 @@
 https://github.com/iot-salzburg/gpu-jupyter 
 
 ```shell
+# 安装nvidia-container-runtime
+cat nvidia-container-runtime-script.sh
+ 
+curl -s -L https://nvidia.github.io/nvidia-container-runtime/gpgkey | \
+  sudo apt-key add -
+distribution=$(. /etc/os-release;echo $ID$VERSION_ID)
+curl -s -L https://nvidia.github.io/nvidia-container-runtime/$distribution/nvidia-container-runtime.list | \
+  sudo tee /etc/apt/sources.list.d/nvidia-container-runtime.list
+sudo apt-get update
+
+# 安装
+sudo apt-get install nvidia-container-runtime
+# 重启docker
+sudo systemctl restart docker
+
+#拉取容器镜像
 docker pull cschranz/gpu-jupyter:v1.4_cuda-11.0_ubuntu-18.04_slim
 
+#启动容器
 docker run --name=mm -d  \
 --gpus all -it -p 8848:8888 -v $(pwd)/data:/home/jovyan/work \
 -e GRANT_SUDO=yes -e JUPYTER_ENABLE_LAB=yes --user root \
@@ -21,7 +38,7 @@ os.environ['TF_CPP_MIN_LOG_LEVEL']='2'
 a = tf.constant(1.)
 b = tf.constant(2.)
 print(a+b)
-print('GPU:', tf.test.is_gpu_available())
+print('GPU:', tf.config.list_physical_devices('GPU'))
 ```
 
 待整理
@@ -97,13 +114,23 @@ docker run --gpus all -d -it -p 10000:8888 -v $(pwd)/data:/home/jovyan/work -e G
 docker run --gpus all -d -it -p 8848:8888 -v $(pwd)/data:/home/jovyan/work -e GRANT_SUDO=yes -e JUPYTER_ENABLE_LAB=yes --user root ba12ff42310f
 ```
 
-# Ubuntu18安装Nvidia驱动
+# Ubuntu18安装Nvidia驱动(实体机)
 
 参考链接 https://www.cnblogs.com/pprp/p/9430836.html#5--%E8%8E%B7%E5%8F%96kernel-source-important 
+
+最好先进BIOS，关闭 `安全启动模式`
+
+```shell
+# 关闭图形界面
+sudo systemctl set-default multi-user.target
+sudo reboot
+```
 
 ![install_nvidia_driver](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/09/upgit_20220917_1663383561.png)
 
 链接中大部分步骤没有问题，这里针对容易出现错误的地方增加说明
+
+`5. 获取kernel source`步骤中的第二条指令可以永 `apt-get install linux-headers-$(uname -r)` 代替
 
 在链接中的 `第8个步骤 挂载Nvidia驱动` 
 
@@ -140,5 +167,201 @@ Fri Sep 16 23:03:57 2022
 
 *其他参考链接*：https://www.if-not-true-then-false.com/2021/debian-ubuntu-linux-mint-nvidia-guide/ 
 
+Nvidia 驱动：https://www.nvidia.com/Download/Find.aspx?lang=en-us
 
+
+
+# ESXi安装Ubuntu虚拟机，并安装nVidia驱动与cuda
+
+0、
+
+EXSi完成显卡直通
+
+
+
+给EXSi打上补丁
+
+参考：https://blog.csdn.net/u012149181/article/details/120193271  
+
+
+
+下载Nvidia 460版本的驱动(官网只能直接下新驱动)， 下载方法参考：
+
+https://blog.csdn.net/mdong9/article/details/112770682
+
+下载cuda驱动
+
+https://developer.nvidia.com/cuda-toolkit-archive
+
+
+
+
+
+1、创建虚拟机 (EXSi别太高)
+
+cpu核心、内存大小、硬盘大小看自己需求
+
+![image-20220922214235342](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/09/upgit_20220922_1663854156.png)
+
+2、编辑虚拟机高级参数
+
+![image-20220922214347332](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/09/upgit_20220922_1663854227.png)
+
+```shell
+hypervisor.cpuid.v0=FALSE
+```
+
+3、添加PCI设备，选择显卡
+
+4、装系统(**装系统的时候账户一定不要设置自动登录，不然驱动装了后会卡在登录界面**)
+
+5、去掉镜像、开机,安装ssh vim
+
+```shell
+sudo apt install openssh-server vim
+```
+
+6、上传驱动
+
+```shell
+scp NVIDIA-Linux-x86_64-460.91.03_2080Ti.run gpu@192.168.104.111:/home/gpu
+```
+
+7、执行脚本 `bash gpu01.sh`
+
+```shell
+cat gpu01.sh
+
+echo "=========================卸载原有nvidia驱动"
+sleep 5s
+sudo apt-get purge nvidia*
+
+echo "=========================安装依赖"
+sleep 5s
+sudo apt-get install gcc g++make -y
+sudo apt-get install build-essential gcc-multilib dkms -y
+
+
+echo "=========================禁用nouveau驱动"
+sleep 5s
+sudo echo "blacklist nouveau" >> /etc/modprobe.d/blacklist-nouveau.conf
+sudo echo "blacklist lbm-nouveau" >> /etc/modprobe.d/blacklist-nouveau.conf
+sudo echo "options nouveau modeset=0" >> /etc/modprobe.d/blacklist-nouveau.conf
+sudo echo "alias nouveau off" >> /etc/modprobe.d/blacklist-nouveau.conf
+sudo echo "alias lbm-nouveau off" >> /etc/modprobe.d/blacklist-nouveau.conf
+
+
+echo "=========================关闭nouveau"
+sleep 5s
+sudo echo options nouveau modeset=0 | sudo tee -a /etc/modprobe.d/nouveau-kms.conf 
+
+
+echo "=========================关闭图形界面"
+sleep 5s
+sudo systemctl set-default multi-user.target
+
+
+
+echo "=========================获取kernel source"
+sleep 5s
+sudo apt-get install linux-source -y
+sudo apt-get install linux-headers-$(uname -r) -y
+
+
+echo "=========================重启"
+sleep 5s
+sudo update-initramfs -u 
+sudo reboot
+```
+
+8、安装驱动
+
+```shell
+sudo ./NVIDIA-Linux-x86_64-460.91.03_2080Ti.run -no-opengl-files -no-x-check -no-nouveau-check
+```
+
+![image-20220922221258820](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/09/upgit_20220922_1663855978.png)
+
+`Continue installation`
+
+![image-20220922221329189](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/09/upgit_20220922_1663856009.png)
+
+![image-20220922221506496](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/09/upgit_20220922_1663856106.png)
+
+32位的驱动，可装，可不装
+
+![image-20220922221549286](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/09/upgit_20220922_1663856149.png)
+
+**No**
+
+
+
+9、加载驱动
+
+```shell
+modprobe nvidia
+```
+
+![image-20220922221616636](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/09/upgit_20220922_1663856176.png)
+
+```shell
+#安装cuda https://blog.csdn.net/qq_43864807/article/details/111572965 
+sudo sh cuda_11.2.0_460.27.04_linux.run --no-opengl-libs
+```
+
+![image-20220929190846815](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/09/upgit_20220929_1664449727.png)
+
+![image-20220929200140173](C:\Users\MOON\AppData\Roaming\Typora\typora-user-images\image-20220929200140173.png)
+
+
+
+10、打开图形界面
+
+```shell
+sudo systemctl set-default graphical.target
+sudo reboot 
+```
+
+# log
+
+## `cdecl` 小工具
+
+发现一个Linux端的小工具`cdecl`，可以分析C语言的语法，比如：
+
+```shell
+cdecl> explain int* f(int) 
+declare f as function (int) returning pointer to int
+```
+
+## openwrt添加zsh
+
+```shell
+opkg update
+opkg install zsh
+# 安装oh-my-zsh
+sh -c "$(wget -O- https://raw.githubusercontent.com/felix-fly/openwrt-ohmyzsh/master/install.sh)"
+# 切换bash
+which zsh && sed -i -- 's:/bin/ash:'`which zsh`':g' /etc/passwd
+```
+
+
+
+
+
+```shell
+# docker导出镜像
+docker save -o gpu.tar cschranz/gpu-jupyter:v1.4_cuda-11.0_ubuntu-18.04_slim
+
+# dockder导入镜像
+docker load -i gpu.tar
+
+#save和load、export和import是成对出现的
+
+docker run --gpus all cschranz/gpu-jupyter:v1.4_cuda-11.0_ubuntu-18.04_slim  nvidia-smi
+
+```
+
+## NVIDIA cuDNN v8 deb方法安装和卸载教程
+
+https://zhuanlan.zhihu.com/p/126997172
 
