--- a/日志/日志2022.09.md
+++ b/日志/日志2022.09.md
@@ -227,10 +227,12 @@ sudo apt install openssh-server vim
 scp NVIDIA-Linux-x86_64-460.91.03_2080Ti.run gpu@192.168.104.111:/home/gpu
 ```
 
-7、执行脚本 `bash gpu01.sh`
+7、执行脚本 [install_nvidia_driver01.sh](#https://github.com/simoonp/Script/blob/main/sh/install_nvidia_driver01.sh)
+
+
 
 ```shell
-cat gpu01.sh
+cat install_nvidia_driver01.sh
 
 echo "=========================卸载原有nvidia驱动"
 sleep 5s
@@ -275,6 +277,10 @@ sudo reboot
 ```
 
 8、安装驱动
+
+或者执行脚本[**install_nvidia_driver02.sh**](#https://github.com/simoonp/Script/blob/main/sh/install_nvidia_driver02.sh)
+
+
 
 ```shell
 sudo ./NVIDIA-Linux-x86_64-460.91.03_2080Ti.run -no-opengl-files -no-x-check -no-nouveau-check
