--- a/日志/日志2022.07.md
+++ b/日志/日志2022.07.md
@@ -69,7 +69,7 @@ mount.cifs //192.168.100.100/video /mnt/mount_video -o user=robot,pass=123456,ve
 
 问题2：`mount error(112): Host is down`          
 
-愿意是Windows没有开启smb1.0
+原因是Windows没有开启smb1.0
 
 在`控制面板`->`程序和功能`->`启动或关闭windows`更能中勾选SMB的相关项，之后重启电脑即可
 
