--- a/日志/日志2022.09.md
+++ b/日志/日志2022.09.md
@@ -317,7 +317,7 @@ sudo sh cuda_11.2.0_460.27.04_linux.run --no-opengl-libs
 
 ![image-20220929190846815](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/09/upgit_20220929_1664449727.png)
 
-![image-20220929200140173](C:\Users\MOON\AppData\Roaming\Typora\typora-user-images\image-20220929200140173.png)
+![image-20220929200140173](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/10/upgit_20221005_1664950803.png)
 
 
 
