--- a/日志/日志2022.09.md
+++ b/日志/日志2022.09.md
@@ -227,7 +227,7 @@ sudo apt install openssh-server vim
 scp NVIDIA-Linux-x86_64-460.91.03_2080Ti.run gpu@192.168.104.111:/home/gpu
 ```
 
-7、执行脚本 [install_nvidia_driver01.sh](#https://github.com/simoonp/Script/blob/main/sh/install_nvidia_driver01.sh)
+7、执行脚本 [install_nvidia_driver01.sh](#https://github.com/simoonp/Script/blob/main/sh/install_nvidia_driver01.sh) https://github.com/simoonp/Script/blob/main/sh/install_nvidia_driver01.sh
 
 
 
@@ -278,7 +278,7 @@ sudo reboot
 
 8、安装驱动
 
-或者执行脚本[**install_nvidia_driver02.sh**](#https://github.com/simoonp/Script/blob/main/sh/install_nvidia_driver02.sh)
+或者执行脚本[**install_nvidia_driver02.sh**](#https://github.com/simoonp/Script/blob/main/sh/install_nvidia_driver02.sh) https://github.com/simoonp/Script/blob/main/sh/install_nvidia_driver02.sh
 
 
 
