--- a/日志/日志2022.07.md
+++ b/日志/日志2022.07.md
@@ -96,6 +96,34 @@ Error relocating /usr/bin/umount: mnt_context_force_unrestricted: symbol not fou
 
 
 
+## smb服务开放端口
+
+```shell
+# 在 /etc/config/firewall 中添加规则如下, 添加后重启服务 /etc/init.d/samba restart
+config rule                                                                                 
+        option target 'ACCEPT'                                                              
+        option src 'wan'                                                                    
+        option proto 'udp'                                                               
+        option dest_port '137-138'                                                          
+        option name 'Allow-samba-netbios'
+ 
+config rule                                                                                 
+        option target 'ACCEPT'                                                              
+        option src 'wan'                                                                    
+        option proto 'tcp'                                                               
+        option dest_port '139'                                                             
+        option name 'Allow-samba-netbios-session'
+ 
+config rule                                                                                 
+        option target 'ACCEPT'                                                              
+        option src 'wan'                                                                    
+        option proto 'tcp'                                                                  
+        option dest_port '445'                                                              
+        option name 'Allow-samba-microsoft-directory-service'
+```
+
+
+
 ## openwrt软件源
 
 ```
