修改daoker日志，备注通过dockerfile构建镜像时镜像大小异常的问题

--- a/日志/日志2022.01.md
+++ b/日志/日志2022.01.md
@@ -959,6 +959,10 @@ made_by_docker01
 
 ### DockerFile构建过程
 
+**注！！！：docker build在构建过程中，Docker client会发送Dockerfile同级目录下的所有文件到Dockerdaemon**
+
+**最好为dockerfile指定一个空目录**
+
 **基础知识**：
 
 1. 每个保留关键字(指令)都必须是大写字母
