添加web端的vscode教程

--- a/日志/日志2022.10.md
+++ b/日志/日志2022.10.md
@@ -10,3 +10,52 @@ https://automaticaddison.com/how-to-create-a-map-for-ros-from-a-floor-plan-or-bl
 
 
 
+# 使用VSCod的web端
+
+- 去官网下载文件包 https://github.com/coder/code-server/releases/ （下载自己需要的版本）
+
+    ```shell
+    wget https://github.com/coder/code-server/releases/download/v4.8.0/code-server-xxx.tar.gz
+    ```
+    
+- 解压
+
+    ```shell
+    tar -xvzf code-server-xxx.tar.gz
+    ```
+    
+- 改个名
+
+    ```shell
+    mv code-server-xxx code-server
+    ```
+
+- 设置密码（也可以不设置）
+
+    ```shell
+    cd code-server/bin
+    export PASSWORD="你想设置的密码"
+    ```
+
+- 指定端口(可以选择任何还未占用的端口，比如348，如果使用的是docker，需要在创建容器前设置端口转发，比如 -p 3652:348)
+
+    ```shell
+    ./code-server --port 348 --host 0.0.0.0 --auth password
+    # –port 348 指定端口，缺省时为 8080
+    # –host 0.0.0.0 允许公网访问，缺省时为 127.0.0.1，只能本地访问
+    # –auth password 指定访问密码，可通过 export 命令设置，参数为 none 时不启用密码
+    ```
+
+- 可以看一下参数列表
+
+    ```shell
+    ./code-server --help
+    ```
+
+- 运行后可以通过`ip:端口`访问了
+
+![image-20221026090104321](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/10/upgit_20221026_1666746114.png)
+
+​    
+
+![image-20221026090144380](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/10/upgit_20221026_1666746104.png)
