添加新日志

--- a/日志/日志2022.01.md
+++ b/日志/日志2022.01.md
@@ -648,12 +648,14 @@ e0335f9ea8b6   tomcat01          0.15%     240.1MiB / 15.61GiB   1.50%     208kB
 - portainer
 
 ```shell
-docker run -d -p 8088:9000 --restart=always -v /var/run/docker.sock:/var/run/docker.sock --privileged=true portainer/portainer
+docker run -d -p 8326:9000 --restart=always -v /var/run/docker.sock:/var/run/docker.sock --privileged=true portainer/portainer
+
+docker run -d --restart=always --name="portainer" -p 9000:9000 -v /var/run/docker.sock:/var/run/docker.sock 6053537/portainer-ce
 ```
 
 - Rancher(CI/CD再用)
 
-### 什么是portainer？
+### 什么是portainer？ 
 
 Docker图形化管理界面！提供一个后台面板
 
