--- a/日志/日志2022.10.md
+++ b/日志/日志2022.10.md
@@ -54,8 +54,8 @@ https://automaticaddison.com/how-to-create-a-map-for-ros-from-a-floor-plan-or-bl
 
 - 运行后可以通过`ip:端口`访问了
 
-![image-20221026090104321](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/10/upgit_20221026_1666746114.png)
+<img src="https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/10/upgit_20221026_1666746114.png" alt="image-20221026090104321" style="zoom:40%;" />
 
 ​    
 
-![image-20221026090144380](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/10/upgit_20221026_1666746104.png)
+<img src="https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/10/upgit_20221026_1666746104.png" alt="image-20221026090144380" style="zoom:70%;" />
