--- a/日志/日志2022.11.md
+++ b/日志/日志2022.11.md
@@ -270,5 +270,50 @@ $$
 可能会发生碰撞的情况：
 
 - 机器人和障碍物的速度夹角绝对值小于90°，且障碍物速度经过三角形区域，且障碍物速度在机器人速度方向上的分量大于机器人速度
-
 - 障碍物速度经过三角形区域 && [(机器人和障碍物的速度夹角绝对值小于90° && 障碍物速度在机器人速度方向上的分量大于机器人速度) || (机器人和障碍物的速度夹角绝对值在90-180之间)] 
+
+# conda
+
+**环境配置**
+
+```shell
+#创建环境,指定python版本
+conda create -n env_name python=3.x
+#激活环境
+conda activate env_name	# source activate env_name
+#查看现有的环境
+conda env list  # 或者 conda info --envs
+#删除环境
+conda remove -n env_name --all
+# 退出当前环境
+deactivate env_name
+
+# 你的环境中用conda或者pip安装包
+conda install 包名称
+# 或者pip install 包名称 -i https://pypi.tuna.tsinghua.edu.cn/simple（清华镜像）
+# 或者pip install 包名称 -i  https://pypi.doubanio.com/simple/ （豆瓣镜像）
+
+# 查看环境中现有的包
+conda list  # 或者 pip list
+
+```
+
+
+
+**打包环境：**
+
+```shell
+# 打包
+conda pack -n name-of-env # 生成一个压缩文件 name-of-env.tar.gz
+
+# 还原
+cd path-of-anaconda3/envs
+mkdir name-of-env
+cd name-of-env
+env_path=$(pwd)
+cd path-of-name-of-env.tar.gz 
+tar -xzvf name-of-env.tar.gz -C $env_path
+conda info -e # 查看结果
+conda activate name-of-env
+```
+
